--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,13 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
+    "module": "esnext",
+    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types"
     ],
